# raft

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: protocol.md
docs/superpowers/plans/: 2026-05-29-raft-mesh-m4-artifacts-logs.md
docs/superpowers/specs/: 2026-05-29-raft-mesh-remote-execution-design.md
run/reviews/: claude-001-main-rs.md  claude-002-feature-survey.md  claude-003-turn-model.md  claude-004-ui-review.md
scripts/: install.sh
src/: capability.rs  cli.rs  crypto.rs  doctor.rs  error.rs  identity.rs  main.rs  mesh.rs  storage.rs  task.rs  types.rs  ui.rs  ui_html.rs  util.rs  wakeup.rs
tests/: cli.rs
