[package]
name = "raft"
version = "0.3.0"
edition = "2024"
description = "Small filesystem-backed agent-to-agent coordination bus."

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"

[[bin]]
name = "raft"
path = "src/main.rs"
