[package]
name = "raft"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
description = "Local-first filesystem-backed agent-to-agent coordination bus with experimental identity, capability, and remote-task primitives."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["agents", "coordination", "local-first", "capability", "cli"]
categories = ["command-line-utilities", "concurrency"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"

[[bin]]
name = "raft"
path = "src/main.rs"
